feat(toggle-language): Connect language button to change language function.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,6 +4,7 @@
       "return": "return"
     },
     "output": {
+      "header": "your cake",
       "cakePrice": "cake price",
       "deposit": "deposit",
       "cakeDiameter": "cake diameter"
