--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -4,6 +4,7 @@
         "return": "wróć"
       },
       "output": {
+        "header": "twój tort",
         "cakePrice": "cena tortu",
         "deposit": "zaliczka",
         "cakeDiameter": "średnica tortu"
