--- a/public/locales/pl/translation.json
+++ b/public/locales/pl/translation.json
@@ -1,4 +1,8 @@
 {
+      "annotation":{
+        "step0": "tort może być na minimum 6 osób",
+        "step1": "tort może mieć wysokość minimum 7 cm"
+      },
       "button": {
         "next": "dalej",
         "return": "wróć"
@@ -10,10 +14,10 @@
         "cakeDiameter": "średnica tortu"
       },
       "steps": {
-        "0": "Ile porcji?",
-        "1": "Wysokość tortu w cm:",
-        "2": "Ustal cenę za osobę:",
-        "3": "Ustal procent zaliczki"
+        "0": "ile porcji?",
+        "1": "wysokość tortu w cm:",
+        "2": "ustal cenę za osobę:",
+        "3": "ustal procent zaliczki"
       },
       "welcomePage": {
         "label": "cześć!",
