fix(output): Made currency string in translation
Also fixed a little bug with steppers circles

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,6 +21,7 @@
     "welcomePage": {
       "label": "hello!",
       "description": "calculate the price and size of your cake"
-    }
+    },
+    "currency": "$"
   }
   
