--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {   "annotation": {
-      "step0": "the cake can be for a minimum of 6 people",
+      "step0": "The cake can be for a minimum of 6 people",
       "step1": "The cake can have a minimum height of 7 cm"
     },
     "button": {
@@ -19,7 +19,7 @@
       "3": "set the deposit percentage"
     },
     "welcomePage": {
-      "description": "calculate the price and size of your cake"
+      "description": "Calculate the price and size of your cake"
     },
     "currency": "$"
   }
