refactor(style-updates): Update Output

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,16 +7,16 @@
       "return": "return"
     },
     "output": {
-      "header": "your cake",
+      "header": "summary",
       "cakePrice": "cake price",
       "deposit": "deposit",
-      "cakeDiameter": "cake diameter"
+      "cakeDiameter": "diameter"
     },
     "steps": {
-      "0": "how many guests will the cake serve?",
-      "1": "cake height in cm:",
-      "2": "set the price per person:",
-      "3": "set the deposit percentage"
+      "0": "How many guests will the cake serve?",
+      "1": "Cake height in cm:",
+      "2": "Set the price per person:",
+      "3": "Set the deposit percentage"
     },
     "welcomePage": {
       "description": "Calculate the price and size of your cake"
