fix(step-header-0-mobile): Fix step header

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,7 +13,7 @@
       "cakeDiameter": "diameter"
     },
     "steps": {
-      "0": "How many guests will the cake serve?",
+      "0": "How many guests?",
       "1": "Cake height in cm:",
       "2": "Set the price per person:",
       "3": "Set the deposit percentage"
